--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,25 @@
-html
-	head
-		link(rel='stylesheet', href='/css/site.css')
-		title Cake Darts
-	body
-		button(type='button' class='btn btn-info btn-lg') New Game
-		button(type='button' class='btn btn-info btn-lg') Continue Game
+extends layout.pug
+	
+block content
+	h1 Cake Darts Scorer
+	p.
+		Here you can start a new darts game, or view players, owes or previous matches by selecting from the menu at the top
+	p
+		button(class='btn btn-primary' type='button' data-toggle='collapse' data-target='#newMatchCollapse' aria-expanded='false' aria-controls='newMatchCollapse') Create Match &raquo;
+	div(class='collapse' id='newMatchCollapse')
+		div(class='card card-block')
+			form(action='/match/start' method='POST' id='newMatchForm')
+				div(class='form-group form-check')
+					legend Players
+					each player in players
+						div(class='form-check')
+							input(type='checkbox' name='playerId' class='form-check-input' id=player.id value=player.id)
+							label(class='form-check-label')= player.name
+
+				div(class='form-group')
+					label(for='matchTypeSelect') Match Type
+					select(class='form-control' name='matchType' id='matchTypeSelect')
+						option 301
+						option 501
+
+				button(type='submit' name='submit' form='newMatchForm' id='startMatchButton' class='btn btn-primary') Start
