Some restructuring of files and adding more items to views

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,8 +18,8 @@ html
 					div(id='navbar' class='navbar-collapse collapse')
 						ul(class='nav navbar-nav')
 							li(class='active')
-								li: a(href='/players') Players
+								li: a(href='/player/list') Players
 								li: a(href='/cake/owes') Owes
-								li: a(href='/matches') Matches
+								li: a(href='/match/list') Matches
 			div(class='jumbotron')
 				block content
