--- a/views/index.pug
+++ b/views/index.pug
@@ -13,7 +13,7 @@ block content
 					legend Players
 					each player in players
 						div(class='form-check')
-							input(type='checkbox' name='playerId' class='form-check-input' id=player.id value=player.id)
+							input(type='checkbox' name='players' class='form-check-input' id=player.id value=player.id)
 							label(class='form-check-label')= player.name
 
 				div(class='form-group')
