--- a/views/players.pug
+++ b/views/players.pug
@@ -44,19 +44,19 @@ block content
 					td= (player.games_won / player.games_played * 100).toFixed(2)
 
 	button(type='button' class='btn btn-block btn-primary' data-toggle='modal' data-target='#addPlayerModal') Add Player
-	div(class='modal modal-sm fade' id='addPlayerModal' tabindex='-1' role='dialog' aria-labelledby='addPlayerModalLabel')
+	div(class='modal fade' id='addPlayerModal' tabindex='-1' role='dialog' aria-labelledby='addPlayerModalLabel')
 		div(class='modal-dialog' role='document')
 			div(class='modal-content')
 				div(class='modal-header')
 					button(type='button' class='close' data-dismiss='modal' aria-label='Close')
 						span(aria-hidden='true') &times;
-				h4(class='modal-title' id='addPlayerModalLabel') Add Player
-		div(class='modal-body')
-			form
-				div(class='form-group')
-					label(for='player-name' class='control-label') Player Name:
-					input(type='text' class='form-control' id='player-name')
-			div(class='modal-footer')
-				button(type='button' class='btn btn-default' data-dismiss='modal') Close
-				button(type='button' class='btn btn-primary') Add Player
+					h4(class='modal-title' id='addPlayerModalLabel') Add Player
+				div(class='modal-body')
+					form
+						div(class='form-group')
+							label(for='player-name' class='control-label') Player Name:
+							input(type='text' class='form-control' id='player-name')
+					div(class='modal-footer')
+						button(type='button' class='btn btn-default' data-dismiss='modal') Close
+						button(type='button' class='btn btn-primary') Add Player
 
