--- a/views/players.pug
+++ b/views/players.pug
@@ -56,7 +56,7 @@ block content
 					form
 						div(class='form-group')
 							label(for='player-name' class='control-label') Player Name:
-							input(type='text' class='form-control' id='player-name')
+							input(type='text' class='form-control' id='playerNameInput')
 					div(class='modal-footer')
 						button(type='button' class='btn btn-default' data-dismiss='modal') Close
-						button(type='button' class='btn btn-primary') Add Player
+						button(type='button' class='btn btn-primary' id='addPlayerButton') Add Player
