Setup proper error handling instead of crashing

--- a/views/matches.pug
+++ b/views/matches.pug
@@ -35,7 +35,7 @@ block content
 					td= match.startTime
 					td= match.endTime
 					td= match.startingScore
-					td TODO
+					td= match.winner
 					td
 						table(class='table table-striped table-bordered')
 							tbody
