Set 'table-responsive' class on all tables to display better on mobile

--- a/views/match.pug
+++ b/views/match.pug
@@ -127,7 +127,7 @@ block content
 				td: label(id='total' text='0') 0
 				td: button(id='submit_score' type='button', class='btn-score btn-info btn-lg') Submit
 
-	div
+	div(class='table-responsive')
 		table(id='score_selector_table' class='table')
 			tbody
 				tr
