--- a/views/matches.pug
+++ b/views/matches.pug
@@ -18,33 +18,34 @@ block content
 		Overview over all played matches
 
 	// TODO Add pagination to this table to limit number of matches displayed
-	table(class='table table-striped table-bordered')
-		thead
-			tr
-				th Start Time
-				th End Time
-				th Starting Score
-				th Winner
-				th Players
-				th Results
-		tbody
-			each match in matches
+	div(class='table-responsive')
+		table(class='table table-striped table-bordered')
+			thead
 				tr
-					// TODO Format these dates
-					th(hidden='true' scope='row')= match.id
-					td= match.startTime
-					td= match.endTime
-					td= match.startingScore
-					td= match.winner
-					td
-						table(class='table table-striped table-bordered')
-							tbody
-								each player in match.players
-									tr
-										td= player.name
-					if !match.is_finished
+					th Start Time
+					th End Time
+					th Starting Score
+					th Winner
+					th Players
+					th Results
+			tbody
+				each match in matches
+					tr
+						// TODO Format these dates
+						th(hidden='true' scope='row')= match.id
+						td= match.startTime
+						td= match.endTime
+						td= match.startingScore
+						td= match.winner
 						td
-							button(type='button' id='continueMatchButton' class='btn btn-primary btn-block btn-continue-match') Continue
-					else
-						td
-							button(type='button' class='btn btn-primary btn-block btn-view-results') View
+							table(class='table table-striped table-bordered')
+								tbody
+									each player in match.players
+										tr
+											td= player.name
+						if !match.is_finished
+							td
+								button(type='button' id='continueMatchButton' class='btn btn-primary btn-block btn-continue-match') Continue
+						else
+							td
+								button(type='button' class='btn btn-primary btn-block btn-view-results') View
