--- a/views/players.pug
+++ b/views/players.pug
@@ -26,37 +26,38 @@ block content
 	p.
 		This is an overview of all players who are participating in Cake Darts
 
-	table(class='table table-striped table-bordered')
-		thead
-			tr
-				th Name
-				th Played
-				th Won
-				th Win %
-				th PPD
-		tbody
-			each player in players
+	div(class='table-responsive')
+		table(class='table table-striped table-bordered')
+			thead
 				tr
-					th(hidden='true' scope='row')= player._id
-					td= player.name
-					td= player.gamesPlayed
-					td= player.gamesWon
-					td= player.gamesPlayed > 0 ? (player.gamesWon / player.gamesPlayed * 100).toFixed(2) : 0
-					td= player.ppd
+					th Name
+					th Played
+					th Won
+					th Win %
+					th PPD
+			tbody
+				each player in players
+					tr
+						th(hidden='true' scope='row')= player._id
+						td= player.name
+						td= player.gamesPlayed
+						td= player.gamesWon
+						td= player.gamesPlayed > 0 ? (player.gamesWon / player.gamesPlayed * 100).toFixed(2) : 0
+						td= player.ppd
 
-	button(type='button' class='btn btn-block btn-primary' data-toggle='modal' data-target='#addPlayerModal') Add Player
-	div(class='modal fade' id='addPlayerModal' tabindex='-1' role='dialog' aria-labelledby='addPlayerModalLabel')
-		div(class='modal-dialog' role='document')
-			div(class='modal-content')
-				div(class='modal-header')
-					button(type='button' class='close' data-dismiss='modal' aria-label='Close')
-						span(aria-hidden='true') &times;
-					h4(class='modal-title' id='addPlayerModalLabel') Add Player
-				div(class='modal-body')
-					form
-						div(class='form-group')
-							label(for='player-name' class='control-label') Player Name:
-							input(type='text' class='form-control' id='playerNameInput')
-					div(class='modal-footer')
-						button(type='button' class='btn btn-default' data-dismiss='modal') Close
-						button(type='button' class='btn btn-primary' id='addPlayerButton') Add Player
+		button(type='button' class='btn btn-block btn-primary' data-toggle='modal' data-target='#addPlayerModal') Add Player
+		div(class='modal fade' id='addPlayerModal' tabindex='-1' role='dialog' aria-labelledby='addPlayerModalLabel')
+			div(class='modal-dialog' role='document')
+				div(class='modal-content')
+					div(class='modal-header')
+						button(type='button' class='close' data-dismiss='modal' aria-label='Close')
+							span(aria-hidden='true') &times;
+						h4(class='modal-title' id='addPlayerModalLabel') Add Player
+					div(class='modal-body')
+						form
+							div(class='form-group')
+								label(for='player-name' class='control-label') Player Name:
+								input(type='text' class='form-control' id='playerNameInput')
+						div(class='modal-footer')
+							button(type='button' class='btn btn-default' data-dismiss='modal') Close
+							button(type='button' class='btn btn-primary' id='addPlayerButton') Add Player
