--- a/views/index.pug
+++ b/views/index.pug
@@ -17,7 +17,7 @@ block content
 						legend Players
 						each player in players
 							div(class='form-check')
-								input(type='checkbox' name='players' class='form-check-input' id=player.id value=player.name)
+								input(type='checkbox' name='players' class='form-check-input' id=player.id value=player.id)
 								label(class='form-check-label')= player.name
 
 					div(class='form-group')
