--- a/views/match.pug
+++ b/views/match.pug
@@ -41,6 +41,15 @@ block scripts
 				window.darts_thrown++;
 			});
 		});
+
+		$(function() {
+			$('#submit_score').click(function() {
+				var firstScoreNumeric = parseInt($('#first :button').attr('title'));
+				var secondScoreNumeric = parseInt($('#second :button').attr('title'));
+				var thirdScoreNumeric = parseInt($('#third :button').attr('title'));
+				console.log('score submitted');
+			});
+		});
 		/*
 		$(function() {
 			$('#submit_score').click(function() {
@@ -106,7 +115,6 @@ block content
 		Unable to cancel match
 
 	h2= 'Match'
-
 	div
 		p Players
 		ol
@@ -126,7 +134,7 @@ block content
 				td: label(id='first' text='0') -
 				td: label(id='second' text='0') -
 				td: label(id='third' text='0') -
-				td: label(id='total' text='0') 0
+				td: button(id='total' text='0' class='btn btn-lg btn-success') 0
 				td: button(id='submit_score' type='button', class='btn-score btn-info btn-lg') Submit
 
 	div(class='table-responsive')
