--- a/views/match.pug
+++ b/views/match.pug
@@ -118,7 +118,7 @@ block content
 	div
 		p Players
 		ol
-			each player in match.players
+			each player in players
 				li(id='player_' + player)= player.name + ' [' + player.current_score + ']'
 
 	table(id='thrown_table' class='table')
