--- a/views/index.pug
+++ b/views/index.pug
@@ -26,4 +26,11 @@ block content
 							option 301
 							option 501
 
+					div(class='form-group')
+						label(for='matchStakeSelect') Match Stake
+						select(class='form-control' name='matchStake' id='matchStakeSelect')
+							option(value=undefined) 
+							option Cake
+							option Beer
+
 					button(type='submit' name='submit' form='newMatchForm' id='startMatchButton' class='btn btn-primary') Start
