--- a/views/players.pug
+++ b/views/players.pug
@@ -34,7 +34,7 @@ block content
 					th Played
 					th Won
 					th Win %
-					th PPD
+					th Statistics
 			tbody
 				each player in players
 					tr
@@ -42,8 +42,9 @@ block content
 						td= player.name
 						td= player.gamesPlayed
 						td= player.gamesWon
-						td= player.gamesPlayed > 0 ? (player.gamesWon / player.gamesPlayed * 100).toFixed(2) : 0
-						td= player.ppd
+						td= player.gamesPlayed == 0 ? 0 : (player.gamesWon / player.gamesPlayed).toFixed(2)
+						td
+							a(class='btn btn-primary' href='/player/' + player._id + '/stats') View
 
 		button(type='button' class='btn btn-block btn-primary' data-toggle='modal' data-target='#addPlayerModal') Add Player
 		div(class='modal fade' id='addPlayerModal' tabindex='-1' role='dialog' aria-labelledby='addPlayerModalLabel')
