--- a/views/players.pug
+++ b/views/players.pug
@@ -57,7 +57,7 @@ block content
 					div(class='modal-body')
 						form
 							div(class='form-group')
-								label(for='player-name' class='control-label') Player Name:
+								label(for='playerNameInput' class='control-label') Player Name:
 								input(type='text' class='form-control' id='playerNameInput')
 						div(class='modal-footer')
 							button(type='button' class='btn btn-default' data-dismiss='modal') Close
