Added indicator for single, double, and tripple on darts thrown buttons

--- a/views/match.pug
+++ b/views/match.pug
@@ -141,75 +141,75 @@ block content
 		table(id='score_selector_table' class='table')
 			tbody
 				tr
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='0') Miss
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='20') 20
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='19') 19
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='18') 18
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='17') 17
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-double' title='40') 20
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-double' title='38') 19
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-double' title='36') 18
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-double' title='34') 17
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-triple' title='60') 20
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-triple' title='57') 19
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-triple' title='54') 18
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-triple' title='51') 17
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='0') Miss<br/>&nbsp;
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='20') 20<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='19') 19<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='18') 18<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='17') 17<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-double' title='40') 20<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-double' title='38') 19<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-double' title='36') 18<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-double' title='34') 17<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-triple' title='60') 20<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-triple' title='57') 19<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-triple' title='54') 18<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block btn-triple' title='51') 17<br/>...
 				tr
 					td(rowspan='2')
-						button(type='button' class='btn-score btn-info btn-lg btn-block btn-double' title='25') Bull
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='16') 16
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='15') 15
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='14') 14
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='13') 13
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='32') 16
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='30') 15
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='28') 14
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='26') 13
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='48') 16
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='45') 15
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='42') 14
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='39') 13
+						button(type='button' class='btn-score btn-info btn-lg btn-block btn-double' title='25') Bull<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='16') 16<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='15') 15<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='14') 14<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block' title='13') 13<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='32') 16<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='30') 15<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='28') 14<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='26') 13<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='48') 16<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='45') 15<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='42') 14<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='39') 13<br/>...
 				tr
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='12') 12
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='11') 11
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='10') 10
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='9') 9
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='24') 12
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='22') 11
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='20') 10
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='18') 9
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='36') 12
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='33') 11
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='30') 10
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='27') 9
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='12') 12<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='11') 11<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='10') 10<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='9') 9<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='24') 12<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='22') 11<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='20') 10<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='18') 9<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='36') 12<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='33') 11<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='30') 10<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='27') 9<br/>...
 				tr
 					td(rowspan='2')
-						button(type='button' class='btn-score btn-info btn-lg btn-block btn-triple' title='50') Bull
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='8') 8
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='7') 7
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='6') 6
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='5') 5
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='16') 8
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='14') 7
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='12') 6
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='10') 5
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='24') 8
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='21') 7
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='18') 6
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='15') 5
+						button(type='button' class='btn-score btn-info btn-lg btn-block btn-triple' title='50') Bull<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='8') 8<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='7') 7<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='6') 6<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='5') 5<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='16') 8<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='14') 7<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='12') 6<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='10') 5<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='24') 8<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='21') 7<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='18') 6<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='15') 5<br/>...
 				tr
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='4') 4
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='3') 3
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='2') 2
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='1') 1
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='8') 4
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='6') 3
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='4') 2
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='2') 1
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='12') 4
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='9') 3
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='6') 2
-					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='3') 1
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='4') 4<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='3') 3<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='2') 2<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block ' title='1') 1<br/>.
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='8') 4<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='6') 3<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='4') 2<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-double' title='2') 1<br/>..
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='12') 4<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='9') 3<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='6') 2<br/>...
+					td: button(type='button' class='btn-score btn-info btn-lg btn-block  btn-triple' title='3') 1<br/>...
 
 	div(class='btn-group')
 		button(type='button' class='btn btn-primary btn-block dropdown-toggle' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false') Advanced
