--- a/views/matches.pug
+++ b/views/matches.pug
@@ -32,20 +32,22 @@ block content
 			tbody
 				each match in matches
 					tr
-						// TODO Format these dates
 						th(hidden='true' scope='row')= match.id
 						td= match.startTime.toISOString()
 						td= match.endTime === undefined ? '' : match.endTime.toISOString()
 						td= match.startingScore
 						td= match.stake
-						td= match.winner
+						if match.isFinished
+							td= match.winner.name
+						else
+							td
 						td
 							table(class='table table-striped table-bordered')
 								tbody
 									each player in match.players
 										tr
 											td= player.name
-						if !match.is_finished
+						if !match.isFinished
 							td
 								button(type='button' id='continueMatchButton' class='btn btn-primary btn-block btn-continue-match') Continue
 						else
