--- a/views/results.pug
+++ b/views/results.pug
@@ -1,15 +1,35 @@
 extends layout.pug
 
 block content
-	h2 Showing Results for Game (#{match.id})
+	h2 Results
 
 	p.
-		Match ID #{match.id} <br>
-		Started #{match.start_time} <br>
-		Finished #{match.end_time} <br>
-		Duration #{match.match_duration}.
+		ID: #{match.id} <br>
+		Started: #{match.startTime.toISOString()} <br>
+		Finished: #{match.endTime.toISOString()} <br>
+		Duration: #{((match.endTime - match.startTime) / (60 * 1000)).toFixed(1)} minutes <br>
+		Stakes: #{match.stake === "" ? "None" : match.stake}
+	
+	table(class='table table-striped table-bordered')
+		thead
+			tr
+				th Players
+				th First 9 PPD
+				th PPD
+				th Winner
+		tbody
+			each player in match.players
+				tr
+					td= player.name
+					td= player.first9ppd
+					td= player.ppd
+					if player.name === match.winner.name
+						td
+							span(class='glyphicon glyphicon-ok' aria-hidden='true')
+					else
+						td
 	p.
-		Starting score was #{match.starting_score}, and a total of #{match.darts_thrown.length * 3} darts were thrown by #{match.players.length} players
+		Starting score was #{match.starting_score}, and a total of XXX darts were thrown by #{match.players.length} players
 
 	table(class='table table-striped table-bordered')
 		thead
@@ -21,11 +41,11 @@ block content
 				th Total
 				th PPD
 		tbody
-			each throws in match.darts_thrown
-				tr
-					td= throws.player
-					td= throws.first_dart
-					td= throws.second_dart
-					td= throws.third_dart
-					td= throws.first_dart + throws.second_dart + throws.third_dart
-					td= ((throws.first_dart + throws.second_dart + throws.third_dart) / 3).toFixed(2)
+			//- each throws in match.darts_thrown
+			//- 	tr
+			//- 		td= throws.player
+			//- 		td= throws.first_dart
+			//- 		td= throws.second_dart
+			//- 		td= throws.third_dart
+			//- 		td= throws.first_dart + throws.second_dart + throws.third_dart
+			//- 		td= ((throws.first_dart + throws.second_dart + throws.third_dart) / 3).toFixed(2)
